--- a/resources/sass/Layout/_footer.scss
+++ b/resources/sass/Layout/_footer.scss
@@ -8,7 +8,7 @@
         position: fixed;
         right: 30px;
         bottom: 30px;
-        background: $background-color_main;
+        background: $background-color_sub;
         border: solid 2px $boader-color_default;
         border-radius: 50%;
         display: flex;
