--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -21,7 +21,7 @@
     }
 
     &__index {
-        padding: 24px 40px;
+        padding: $space_l $space_m;
         background: $background-color_sub;
 
         &--like,
