--- a/resources/sass/Object/Component/_card.scss
+++ b/resources/sass/Object/Component/_card.scss
@@ -15,7 +15,7 @@
         min-width: 200px;
 
         @include mq(sm) {
-            height: 100px;
+            max-height: 100%;
             min-width: 100%;
         }
     }
