--- a/resources/sass/Object/Component/_input.scss
+++ b/resources/sass/Object/Component/_input.scss
@@ -1,5 +1,6 @@
 .c-input {
     width: 100%;
+    height: 50px;
     box-sizing: border-box;
     background: $background-color_main;
     border: 1px solid $boader-color_default;
