--- a/resources/sass/Object/Component/_attachment.scss
+++ b/resources/sass/Object/Component/_attachment.scss
@@ -1,6 +1,6 @@
 .c-attachment {
     width: 50%;
-    margin-right: $space_s;
+    margin-right: $space_m;
 
     @include mq(sm) {
         width: 100%;
