--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,6 +37,7 @@
 @import 'Object/component/checkbox';
 @import 'Object/component/container';
 @import 'Object/component/error';
+@import 'Object/component/flash';
 @import 'Object/component/form';
 @import 'Object/component/hero';
 @import 'Object/component/icon';
