商品出品処理の商品画像と商品編集処理の賞味期限日付のテスト対応中、次回ログインを省略する機能追加

--- a/resources/sass/Layout/_nav.scss
+++ b/resources/sass/Layout/_nav.scss
@@ -116,6 +116,14 @@
             line-height: 60px;
         }
 
+        &--name {
+            @include mq(sm) {
+                color: $font-color_sub;
+                font-size: $font-size_l;
+                font-weight: bold;
+            }
+        }
+
         &--icon {
             display: inline-block;
             width: 30px;
