--- a/resources/sass/Object/Component/_button.scss
+++ b/resources/sass/Object/Component/_button.scss
@@ -76,7 +76,7 @@
         margin: $space_s;
 
         @include mq(sm) {
-            font-size: $font-size_s;
+            font-size: $font-size_m;
         }
     }
 
