--- a/public/css/app.css
+++ b/public/css/app.css
@@ -291,15 +291,15 @@ body {
 }
 
 .l-main__wrapper {
-  padding: 24px;
+  padding: 24px 16px;
   border: 0.5px solid #434343;
   min-width: 75%;
 }
 
 @media screen and (max-width: 414px) {
   .l-main__wrapper {
-    margin: 16px;
-    padding: 16px;
+    padding: 8px;
+    margin: 8px;
   }
 }
 
@@ -436,6 +436,14 @@ body {
   line-height: 60px;
 }
 
+@media screen and (max-width: 414px) {
+  .l-nav__menu--name {
+    color: #fefefe;
+    font-size: 24px;
+    font-weight: bold;
+  }
+}
+
 .l-nav__menu--icon {
   display: inline-block;
   width: 30px;
@@ -463,7 +471,7 @@ body {
 }
 
 .l-sidebar {
-  width: 25%;
+  width: 35%;
   background: #eee;
 }
 
@@ -575,7 +583,7 @@ body {
   .c-button__detail,
   .c-button__edit,
   .c-button__cancel {
-    font-size: 8px;
+    font-size: 12px;
   }
 }
 
@@ -598,6 +606,7 @@ body {
   height: 100%;
   border: 1px solid #434343;
   max-width: 200px;
+  font-size: 16px;
 }
 
 @media screen and (max-width: 414px) {
@@ -610,7 +619,6 @@ body {
 .c-card__picture {
   display: block;
   width: 100%;
-  height: 150px;
   min-width: 200px;
 }
 
@@ -735,7 +743,7 @@ body {
 }
 
 .c-icon {
-  font-size: 24px;
+  font-size: 16px;
 }
 
 @media screen and (max-width: 414px) {
@@ -849,6 +857,7 @@ body {
   text-align: center;
   text-decoration: none;
   color: #434343;
+  font-size: 16px;
 }
 
 @media screen and (max-width: 414px) {
@@ -1014,6 +1023,10 @@ body {
   height: 32px;
 }
 
+.c-text {
+  font-size: 16px;
+}
+
 @media screen and (max-width: 414px) {
   .c-text {
     font-size: 12px;
@@ -1120,8 +1133,6 @@ body {
 @media screen and (max-width: 414px) {
   .p-article {
     display: block;
-    padding: 16px;
-    font-size: 8px;
   }
 }
 
@@ -1155,7 +1166,7 @@ body {
 .p-mypage__liked,
 .p-mypage__purchased {
   background: #fefefe;
-  padding: 32px;
+  padding: 16px;
 }
 
 @media screen and (max-width: 414px) {
@@ -1190,31 +1201,19 @@ body {
 }
 
 .p-product__item {
-  padding: 8px;
+  margin: 8px;
 }
 
 @media screen and (max-width: 414px) {
   .p-product__item {
     width: 50%;
     padding: 8px 0;
+    margin: 0;
   }
 }
 
 .p-product__index {
-  padding: 24px 16px;
   background: #fefefe;
-}
-
-.p-product__index--like,
-.p-product__index--purchased,
-.p-product__index--sale {
-  padding: 32px;
-}
-
-@media screen and (max-width: 414px) {
-  .p-product__index {
-    padding: 8px;
-  }
 }
 
 .p-product__picture--container {
