--- a/resources/sass/Layout/_main.scss
+++ b/resources/sass/Layout/_main.scss
@@ -9,13 +9,13 @@
     }
 
     &__wrapper {
-        padding: $space_l;
+        padding: $space_l $space_m;
         border: 0.5px solid $boader-color_default;
         min-width: 75%;
 
         @include mq(sm){
-            margin: $space_m;
-            padding: $space_m;
+            padding: $space_s;
+            margin: $space_s;
         }
 
         &--terms,
