--- a/resources/sass/Object/Component/_card.scss
+++ b/resources/sass/Object/Component/_card.scss
@@ -2,6 +2,7 @@
     height: 100%;
     border: 1px solid $boader-color_default;
     max-width: 200px;
+    font-size: $font-size_default;
 
     @include mq(sm) {
         max-width: 100%;
@@ -11,7 +12,6 @@
     &__picture {
         display: block;
         width: 100%;
-        height: 150px;
         min-width: 200px;
 
         @include mq(sm) {
