--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -13,26 +13,16 @@
     }
 
     &__item {
-        padding: $space_s;
+        margin: $space_s;
         @include mq(sm) {
             width: calc(100% / 2);
             padding: $space_s 0;
+            margin: 0;
         }
     }
 
     &__index {
-        padding: $space_l $space_m;
         background: $background-color_sub;
-
-        &--like,
-        &--purchased,
-        &--sale {
-            padding: $space_xl;
-        }
-
-        @include mq(sm) {
-            padding: $space_s;
-        }
     }
 
     &__picture {
