--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -47,6 +47,7 @@
 @import 'Object/component/pagination';
 @import 'Object/component/panel';
 @import 'Object/component/product';
+@import 'Object/component/required';
 @import 'Object/component/selectbox';
 @import 'Object/component/text';
 @import 'Object/component/textarea';
@@ -58,7 +59,7 @@
 // -----------------------------------------------------------------
 @import 'Object/project/article';
 @import 'Object/project/card';
-@import 'Object/project/like';
+@import 'Object/project/icon';
 @import 'Object/project/mypage';
 @import 'Object/project/pagination';
 @import 'Object/project/policy';
