--- a/public/css/app.css
+++ b/public/css/app.css
@@ -291,14 +291,14 @@ body {
 }
 
 .l-main__wrapper {
-  padding: 24px 16px;
+  padding: 48px 16px;
   border: 0.5px solid #434343;
   min-width: 75%;
 }
 
 @media screen and (max-width: 414px) {
   .l-main__wrapper {
-    padding: 8px;
+    padding: 32px 8px;
     margin: 8px;
   }
 }
@@ -682,7 +682,7 @@ body {
 
 .c-error {
   display: block;
-  color: #ff0000;
+  color: #ff3333;
   font-weight: bold;
 }
 
@@ -842,7 +842,7 @@ body {
   font-weight: bold;
   border-radius: 5px;
   color: #fefefe;
-  background: #ff0000;
+  background: #ff6666;
 }
 
 @media screen and (max-width: 414px) {
@@ -1018,6 +1018,26 @@ body {
   font-size: 12px;
 }
 
+.c-required {
+  font-weight: bold;
+  padding: 3px 7px;
+  margin: 0px 5px;
+  line-height: 1;
+  vertical-align: middle;
+  text-align: center;
+  border-radius: 10px;
+  display: inline-block;
+  color: #fefefe;
+  font-size: 12px;
+  background-color: #ff6666;
+}
+
+@media screen and (max-width: 414px) {
+  .c-required {
+    font-size: 8px;
+  }
+}
+
 .c-selectbox {
   width: 100%;
   height: 32px;
@@ -1145,7 +1165,7 @@ body {
   display: inline-block;
 }
 
-.p-like {
+.p-icon {
   display: flex;
   align-items: center;
   justify-content: flex-end;
