--- a/resources/sass/Object/Component/_button.scss
+++ b/resources/sass/Object/Component/_button.scss
@@ -2,6 +2,7 @@
     border-radius: 3px;
     text-decoration: none;
     font-size: $font-size_default;
+    color: $font-color_default;
     background: $background-color_sub;
 
     @include mq(sm) {
