--- a/resources/sass/Object/Component/_product.scss
+++ b/resources/sass/Object/Component/_product.scss
@@ -6,6 +6,7 @@
             display: block;
             margin: auto;
             max-width: 700px;
+            padding: $space_s 0;
 
             @include mq(sm) {
                 width: 100%;
