--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -22,7 +22,12 @@
     }
 
     &__index {
+        padding: $space_l $space_m;
         background: $background-color_sub;
+
+        @include mq(sm) {
+            padding: $space_s;
+        }
     }
 
     &__picture {
