S3バケットの画像パス修正・画像アップロード確認、画像パスのメソッド修正

--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -2,6 +2,7 @@
 
     &__list {
         width: 100%;
+        min-height: 200px;
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
@@ -37,10 +38,5 @@
             border: 1px solid $boader-color_default;
             margin: auto;
         }
-    }
-
-    &__button {
-        display: flex;
-        flex-direction: column;
     }
 }
