--- a/public/css/app.css
+++ b/public/css/app.css
@@ -293,7 +293,7 @@ body {
 .l-main__wrapper {
   padding: 24px 0;
   border: 0.5px solid #434343;
-  min-width: 80%;
+  min-width: 75%;
 }
 
 @media screen and (max-width: 414px) {
@@ -470,7 +470,7 @@ body {
 }
 
 .l-sidebar {
-  min-width: 20%;
+  min-width: 25%;
   background: #eee;
 }
 
@@ -495,6 +495,7 @@ body {
 .c-button {
   border-radius: 3px;
   text-decoration: none;
+  text-align: center;
   font-size: 16px;
   color: #434343;
   background: #fefefe;
@@ -600,6 +601,11 @@ body {
 .c-button__purchase:disabled {
   background: #fefefe;
   cursor: not-allowed;
+}
+
+.c-button__container {
+  display: flex;
+  flex-direction: column;
 }
 
 .c-card {
@@ -1132,7 +1138,6 @@ body {
 }
 
 .c-title__sub {
-  text-align: left;
   font-size: 24px;
 }
 
@@ -1186,6 +1191,28 @@ body {
   }
 }
 
+.p-mypage__profile {
+  background: #fefefe;
+}
+
+.p-mypage__icon--container {
+  width: 80%;
+  height: 80%;
+  margin: auto;
+}
+
+.p-mypage__icon {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.p-mypage__username {
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+}
+
 .p-mypage__sale,
 .p-mypage__liked,
 .p-mypage__purchased {
@@ -1212,6 +1239,7 @@ body {
 
 .p-product__list {
   width: 100%;
+  min-height: 200px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -1252,11 +1280,6 @@ body {
   height: 100%;
   border: 1px solid #434343;
   margin: auto;
-}
-
-.p-product__button {
-  display: flex;
-  flex-direction: column;
 }
 
 .p-profile {
