--- a/resources/sass/Object/Component/_button.scss
+++ b/resources/sass/Object/Component/_button.scss
@@ -1,6 +1,7 @@
 .c-button {
     border-radius: 3px;
     text-decoration: none;
+    text-align: center;
     font-size: $font-size_default;
     color: $font-color_default;
     background: $background-color_sub;
@@ -94,5 +95,10 @@
             background: $background-color_sub;
             cursor: not-allowed;
         }
+    }
+
+    &__container {
+        display: flex;
+        flex-direction: column;
     }
 }
