--- a/resources/sass/Object/Project/_mypage.scss
+++ b/resources/sass/Object/Project/_mypage.scss
@@ -9,6 +9,28 @@
         }
     }
 
+    &__profile {
+        background: $background-color_sub;
+    }
+
+    &__icon--container {
+        width: 80%;
+        height: 80%;
+        margin: auto;
+    }
+
+    &__icon {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+    }
+
+    &__username {
+        text-align: center;
+        font-weight: bold;
+        font-size: $font-size_default;
+    }
+
     &__sale,
     &__liked,
     &__purchased {
