--- a/resources/sass/Object/Component/_link.scss
+++ b/resources/sass/Object/Component/_link.scss
@@ -17,6 +17,11 @@
         text-align: right;
     }
 
+    &__withdraw {
+        display: block;
+        text-align: right;
+    }
+
     &__back {
         display: inline-block;
     }
