--- a/resources/sass/Object/Component/_pagination.scss
+++ b/resources/sass/Object/Component/_pagination.scss
@@ -3,7 +3,7 @@
     list-style-type: none;
 
     & li {
-        border: 1px solid $boader-color_default;
+        border: 1px solid $boader-color_line;
         padding: $space_l;
         text-align: center;
 
