--- a/resources/sass/Object/Project/_product.scss
+++ b/resources/sass/Object/Project/_product.scss
@@ -35,7 +35,7 @@
         &--container {
             position: relative;
             height: 100%;
-            border: 1px solid $boader-color_default;
+            border: 1px solid $boader-color_line;
             margin: auto;
         }
     }
