--- a/resources/sass/Object/Project/_profile.scss
+++ b/resources/sass/Object/Project/_profile.scss
@@ -13,7 +13,7 @@
             height: 200px;
             margin: auto;
             border-radius: 50%;
-            border: 1px solid $boader-color_default;
+            border: 1px solid $boader-color_line;
         }
     }
 }
