--- a/public/css/app.css
+++ b/public/css/app.css
@@ -291,20 +291,14 @@ body {
 }
 
 .l-main__wrapper {
-  padding: 24px 0;
-  border: 0.5px solid #434343;
   min-width: 75%;
+  border: 0.5px solid #434343;
 }
 
 @media screen and (max-width: 414px) {
   .l-main__wrapper {
     margin: 8px;
   }
-}
-
-.l-main__wrapper--terms,
-.l-main__wrapper--policy {
-  border: none;
 }
 
 .l-nav__menu {
@@ -496,9 +490,15 @@ body {
   border-radius: 3px;
   text-decoration: none;
   text-align: center;
-  font-size: 16px;
+  font-weight: bold;
   color: #434343;
+  font-size: 16px;
   background: #fefefe;
+}
+
+.c-button:hover {
+  cursor: pointer;
+  color: #fefefe;
 }
 
 @media screen and (max-width: 414px) {
@@ -512,12 +512,22 @@ body {
   text-align: center;
   font-weight: bold;
   color: #434343;
-  border: 2px solid #ff0000;
+  border: 2px solid #ff2828;
 }
 
 .c-button__register:hover {
-  color: #fefefe;
-  background: #ff0000;
+  background: #ff2828;
+}
+
+.c-button__top {
+  margin: auto;
+  display: flex;
+  width: 30%;
+  justify-content: center;
+  height: 50px;
+  align-items: center;
+  border-radius: 100vh;
+  font-size: 24px;
 }
 
 .c-button__contact {
@@ -526,12 +536,11 @@ body {
   text-align: center;
   font-weight: bold;
   color: #434343;
-  border: 2px solid #ff0000;
+  border: 2px solid #ff2828;
 }
 
 .c-button__contact:hover {
-  color: #fefefe;
-  background: #ff0000;
+  background: #ff2828;
 }
 
 .c-button__submit {
@@ -541,51 +550,30 @@ body {
   font-weight: bold;
 }
 
-.c-button__user {
-  border: 2px solid #00bfff;
-}
-
-.c-button__user:hover {
-  background: #00bfff;
-}
-
-.c-button__convenience {
-  border: 2px solid #ff1493;
-}
-
-.c-button__convenience:hover {
-  background: #ff1493;
-}
-
-.c-button__common {
+.c-button__primary {
   border: 2px solid #32cd32;
 }
 
-.c-button__common:hover {
+.c-button__primary:hover {
   background: #32cd32;
 }
 
-.c-button:hover {
-  font-weight: bold;
-  cursor: pointer;
+.c-button__main {
+  border: 2px solid #ff2828;
 }
 
-.c-button__detail,
-.c-button__edit,
-.c-button__cancel {
-  display: block;
-  text-align: center;
-  color: #434343;
-  padding: 8px;
-  margin: 8px;
+.c-button__main:hover {
+  color: #fefefe;
+  background: #ff2828;
 }
 
-@media screen and (max-width: 414px) {
-  .c-button__detail,
-  .c-button__edit,
-  .c-button__cancel {
-    font-size: 12px;
-  }
+.c-button__default {
+  border: 2px solid #434343;
+}
+
+.c-button__default:hover {
+  color: #fefefe;
+  background: #ffa500;
 }
 
 .c-button__share {
@@ -595,12 +583,13 @@ body {
 
 .c-button__purchase {
   display: block;
-  color: #434343;
+  color: #fefefe;
+  background: #eee;
 }
 
 .c-button__purchase:disabled {
-  background: #fefefe;
   cursor: not-allowed;
+  background: #434343;
 }
 
 .c-button__container {
@@ -641,9 +630,7 @@ body {
   font-weight: bold;
 }
 
-.c-card__price,
-.c-card__category,
-.c-card__date {
+.c-card__text {
   text-align: center;
 }
 
@@ -700,22 +687,6 @@ body {
   }
 }
 
-.c-flash {
-  width: 100%;
-  text-align: center;
-  border-radius: 5px;
-  margin: 16px 0;
-  padding: 24px 0;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-@media screen and (max-width: 414px) {
-  .c-flash {
-    font-size: 12px;
-  }
-}
-
 .c-form {
   padding: 40px 240px;
   background: #fefefe;
@@ -725,6 +696,10 @@ body {
   .c-form {
     padding: 24px;
   }
+}
+
+.c-form__column {
+  padding: 40px 120px;
 }
 
 .c-hero {
@@ -751,13 +726,7 @@ body {
 }
 
 .c-icon {
-  font-size: 16px;
-}
-
-@media screen and (max-width: 414px) {
-  .c-icon {
-    font-size: 12px;
-  }
+  font-size: 24px;
 }
 
 .c-icon:hover {
@@ -769,11 +738,18 @@ body {
 }
 
 .c-icon__unlike {
-  color: #999;
+  color: #ccc;
+}
+
+.c-icon__nolike {
+  color: #ccc;
+  pointer-events: none;
 }
 
 .c-icon__share {
-  color: #fefefe;
+  border: 1px solid;
+  border-radius: 50px;
+  color: #434343;
 }
 
 .c-input {
@@ -799,6 +775,15 @@ body {
   .c-input::placeholder {
     font-size: 12px;
   }
+}
+
+.c-input__price {
+  width: 35%;
+}
+
+.c-input__date {
+  display: flex;
+  align-items: center;
 }
 
 .c-input__password {
@@ -880,6 +865,11 @@ body {
 }
 
 .c-link__products {
+  text-align: right;
+}
+
+.c-link__withdraw {
+  display: block;
   text-align: right;
 }
 
@@ -1007,7 +997,7 @@ body {
   display: block;
   margin: auto;
   max-width: 700px;
-  padding: 8px 0;
+  padding: 24px 0;
 }
 
 @media screen and (max-width: 414px) {
@@ -1063,6 +1053,10 @@ body {
   }
 }
 
+.c-text__note {
+  font-size: 12px;
+}
+
 .c-text__max {
   display: flex;
   justify-content: flex-end;
@@ -1071,19 +1065,6 @@ body {
 .c-text__withdraw {
   font-weight: bold;
   line-height: 1.5;
-}
-
-.c-text__attention {
-  position: absolute;
-  right: 0px;
-  bottom: -3px;
-  font-size: 12px;
-}
-
-@media screen and (max-width: 414px) {
-  .c-text__attention {
-    font-size: 8px;
-  }
 }
 
 .c-textarea {
@@ -1108,10 +1089,10 @@ body {
 }
 
 .c-textarea__count {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
-  font-size: 12px;
+  position: relative;
+  right: -80%;
+  bottom: 15px;
+  font-size: 16px;
 }
 
 .c-title {
@@ -1123,16 +1104,6 @@ body {
 
 @media screen and (max-width: 414px) {
   .c-title {
-    font-size: 16px;
-  }
-}
-
-.c-title__header {
-  font-size: 24px;
-}
-
-@media screen and (max-width: 414px) {
-  .c-title__header {
     font-size: 16px;
   }
 }
@@ -1154,9 +1125,43 @@ body {
   font-size: 16px;
 }
 
+.c-tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.c-tooltip__text {
+  display: none;
+  position: absolute;
+  padding: 10px;
+  font-size: 12px;
+  line-height: 1.6em;
+  color: #fff;
+  border-radius: 5px;
+  background: #000;
+  width: 150px;
+  top: -75%;
+  right: -25%;
+  transform: translateX(-50%);
+}
+
+.c-tooltip__text:before {
+  content: "";
+  position: absolute;
+  left: 110%;
+  bottom: 30%;
+  border: 15px solid transparent;
+  border-top: 15px solid #000;
+  margin-left: -20px;
+  transform: rotateZ(270deg);
+}
+
+.c-tooltip:hover .c-tooltip__text {
+  display: block;
+}
+
 .p-article {
   display: flex;
-  font-size: 12px;
 }
 
 @media screen and (max-width: 414px) {
@@ -1172,6 +1177,10 @@ body {
 .p-card__container {
   position: relative;
   display: inline-block;
+}
+
+.p-expiration {
+  display: flex;
 }
 
 .p-icon {
@@ -1195,6 +1204,21 @@ body {
   background: #fefefe;
 }
 
+.p-mypage__profile--header {
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.p-mypage__profile--container {
+  opacity: 0.7;
+}
+
+.p-mypage__profile--content {
+  display: flex;
+  justify-content: center;
+}
+
 .p-mypage__icon--container {
   width: 80%;
   height: 80%;
@@ -1205,12 +1229,6 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-}
-
-.p-mypage__username {
-  text-align: center;
-  font-weight: bold;
-  font-size: 16px;
 }
 
 .p-mypage__sale,
@@ -1231,10 +1249,6 @@ body {
 .p-pagination {
   display: flex;
   justify-content: center;
-}
-
-.p-policy {
-  line-height: 1.5;
 }
 
 .p-product__list {
@@ -1461,7 +1475,7 @@ body {
   margin-left: 32px;
 }
 
-ml__xxl.u- {
+.u-ml__xxl {
   margin-left: 40px;
 }
 
