--- a/resources/sass/Object/Component/_button.scss
+++ b/resources/sass/Object/Component/_button.scss
@@ -2,9 +2,15 @@
     border-radius: 3px;
     text-decoration: none;
     text-align: center;
-    font-size: $font-size_default;
+    font-weight: bold;
     color: $font-color_default;
+    font-size: $font-size_default;
     background: $background-color_sub;
+
+    &:hover {
+        cursor: pointer;
+        color: $font-color_sub;
+    }
 
     @include mq(sm) {
         font-size: $font-size_m;
@@ -15,11 +21,21 @@
         text-align: center;
         font-weight: bold;;
         color: $font-color_default;
-        border: 2px solid #ff0000;
+        border: 2px solid $boader-color_main;
         &:hover {
-            color: $font-color_sub;
-            background: #ff0000;
+            background: $background-color_btn_main;
         }
+    }
+
+    &__top {
+        margin: auto;
+        display: flex;
+        width: 30%;
+        justify-content: center;
+        height: 50px;
+        align-items: center;
+        border-radius: 100vh;
+        font-size: 24px;
     }
 
     &__contact {
@@ -28,10 +44,9 @@
         text-align: center;
         font-weight: bold;;
         color: $font-color_default;
-        border: 2px solid #ff0000;
+        border: 2px solid $boader-color_main;
         &:hover {
-            color: $font-color_sub;
-            background: #ff0000;
+            background: $background-color_btn_main;
         }
     }
 
@@ -42,43 +57,26 @@
         font-weight: bold;
     }
 
-    &__user {
-        border: 2px solid #00bfff;
+    &__primary {
+        border: 2px solid $boader-color_primary;
         &:hover {
-            background: #00bfff;
+            background: $background-color_btn_primary;
         }
     }
 
-    &__convenience {
-        border: 2px solid #ff1493;
+    &__main {
+        border: 2px solid $boader-color_main;
         &:hover {
-            background: #ff1493;
+            color: $font-color_sub;
+            background: $background-color_btn_main;
         }
     }
 
-    &__common {
-        border: 2px solid #32cd32;
+    &__default {
+        border: 2px solid $boader-color_line;
         &:hover {
-            background: #32cd32;
-        }
-    }
-
-    &:hover {
-        font-weight: bold;
-        cursor: pointer;
-    }
-
-    &__detail,
-    &__edit,
-    &__cancel {
-        display: block;
-        text-align: center;
-        color: $font-color_default;
-        padding: $space_s;
-        margin: $space_s;
-
-        @include mq(sm) {
-            font-size: $font-size_m;
+            color: $font-color_sub;
+            background: $background-color_btn_default;
         }
     }
 
@@ -89,11 +87,11 @@
 
     &__purchase {
         display: block;
-        color: $font-color_default;
-
+        color: $font-color_sub;
+        background: $background-color_sub2;
         &:disabled{
-            background: $background-color_sub;
             cursor: not-allowed;
+            background: $background-color_sub3;
         }
     }
 
