--- a/resources/sass/Object/Project/_register.scss
+++ b/resources/sass/Object/Project/_register.scss
@@ -9,6 +9,6 @@
         overflow-y: auto;
         line-height: 1.2;
         font-size: $font-size_m;
-        border: 0.5px solid $boader-color_default;
+        border: 0.5px solid $boader-color_line;
     }
 }
