--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1091,7 +1091,7 @@ body {
 .c-textarea__count {
   position: relative;
   right: -80%;
-  bottom: 15px;
+  bottom: 10px;
   font-size: 16px;
 }
 
@@ -1219,16 +1219,16 @@ body {
   justify-content: center;
 }
 
+.p-mypage__icon {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
 .p-mypage__icon--container {
   width: 80%;
   height: 80%;
   margin: auto;
-}
-
-.p-mypage__icon {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
 }
 
 .p-mypage__sale,
