--- a/resources/sass/Object/Component/_card.scss
+++ b/resources/sass/Object/Component/_card.scss
@@ -1,5 +1,4 @@
 .c-card {
-    height: 100%;
     border: 1px solid $boader-color_line;
     max-width: 200px;
     font-size: $font-size_default;
@@ -9,24 +8,42 @@
         font-size: $font-size_m;
     }
 
-    &__picture {
-        display: block;
-        width: 100%;
-        min-width: 200px;
-        min-height: 180px;
-        max-height: 180px;
-
-        @include mq(sm) {
-            max-height: 100%;
-            min-width: 100%;
-        }
-    }
-
     &__name {
         font-weight: bold;
     }
 
+    &__picture {
+        display: block;
+        width: 200px;
+        height: 180px;
+
+        @include mq(sm) {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
     &__text {
         text-align: center;
+    }
+
+    &__label {
+        position: absolute;
+        z-index: 1;
+        opacity: .9;
+        color: $font-color_default;
+        background-color: $background-color_sub;
+    }
+
+    &__price {
+        width: 25%;
+        right: -8px;
+        bottom: 55px;
+        font-weight: bold;
+    }
+
+    &__category {
+        top: 0%;
+        font-size: $font-size_m;
     }
 }
