--- a/resources/sass/Layout/_nav.scss
+++ b/resources/sass/Layout/_nav.scss
@@ -124,7 +124,7 @@
             }
         }
 
-        &--icon {
+        &--avatar {
             display: inline-block;
             width: 30px;
             height: 30px;
