--- a/resources/sass/Object/Project/_mypage.scss
+++ b/resources/sass/Object/Project/_mypage.scss
@@ -25,17 +25,15 @@
         }
     }
 
-    &__icon {
+    &__avatar {
         width: 150px;
         height: 150px;
         border-radius: 50%;
         &--container {
-            width: 80%;
-            height: 80%;
+            width: 70%;
             margin: auto;
         }
     }
-
 
     &__sale,
     &__liked,
