--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,6 +31,7 @@
 // -----------------------------------------------------------------
 // Component
 // -----------------------------------------------------------------
+@import 'Object/component/avatar';
 @import 'Object/component/attachment';
 @import 'Object/component/button';
 @import 'Object/component/card';
